--- a/index.html
+++ b/index.html
@@ -24,35 +24,36 @@
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
           <button class="header__theme-menu-button header__theme-menu-button_type_light">
-            День
+            день
           </button>
         </li>
         <li class="header__theme-menu-item">
           <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
             disabled>
-            Авто
+            авто
           </button>
         </li>
         <li class="header__theme-menu-item">
           <button class="header__theme-menu-button header__theme-menu-button_type_dark">
-            Неон
+            неон
           </button>
         </li>
       </ul>
     </nav>
     <h1 class="header__title">no focus</h1>
     <p class="header__subtitle title-decor">Что делать, когда не можешь делать ничего
-      Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+    </p>
   </header>
   <main class="content">
     <section class="content-section why">
-      <h2 class="content-section__title">Почему сосредоточиться так сложно</h2>
+      <h2 class="content-section__title">Почему сосредоточиться так<br>сложно</h2>
       <h3 class="content__paragraph-title title-decor">Многозадачность</h3>
       <p class="content__paragraph">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
         легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том,
         что её просто не существует. Исследователи
-        <a class="content-link">выяснили</a>
-        , что мозгу тяжело концентрироваться даже на двух делах
+        <a class="content-link" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/">выяснили</a>, что мозгу
+        тяжело концентрироваться даже на двух делах
         одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и
         адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
       </p>
@@ -64,7 +65,7 @@
         Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
     </section>
     <section class="content-section what">
-      <h2 class="content-section__title">Что снижает концентрацию внимания?</h2>
+      <h2 class="content-section__title">Что снижает концентрацию<br>внимания?</h2>
       <h3 class="content__paragraph-title title-decor">Многозадачность</h3>
       <p class="content__paragraph">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и
         резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
@@ -83,7 +84,8 @@
         вернуться к работе.</p>
     </section>
     <section class="content-section how">
-      <h2 class="content-section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <h2 class="content-section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
+      </h2>
       <h3 class="content__paragraph-title title-decor">5 простых (на самом деле не очень) советов</h3>
       <h4 class="content__paragraph-subtitle title-decor">Представьте небо и облака</h4>
       <p class="content__paragraph">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь
@@ -96,10 +98,13 @@
         эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
         попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
       <h4 class="content__paragraph-subtitle title-decor">Прогуляйтесь</h4>
-      <p class="content__paragraph">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что
-        созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
+      <p class="content__paragraph">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+        <a class="content-link"
+          href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание
+        природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
         понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше
-        кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+        кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+      </p>
       <h4 class="content__paragraph-subtitle title-decor">Хорошо ешьте</h4>
       <p class="content__paragraph">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
         резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
@@ -110,12 +115,12 @@
         часов и круто тренирует направленное внимание.</p>
     </section>
     <section class="content-section in-pictures">
-      <h3 class="content__paragraph-title title-decor">А можно в картинках?</h3>
-      <img class="content__picture">
-      <img class="content__picture">
-      <img class="content__picture">
-      <img class="content__picture">
-      <img class="content__picture">
+      <h3 class="content__pictures-title title-decor">А можно в картинках?</h3>
+      <img class="content__picture" src="./images/sunset.png">
+      <img class="content__picture" src="./images/ice-cream.png">
+      <img class="content__picture" src="./images/tape.png">
+      <img class="content__picture" src="./images/books.png">
+      <img class="content__picture" src="./images/street.png">
     </section>
   </main>
   <footer class="footer decorated-zone">
