добавлены адаптивы под все разрешения

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +15,6 @@
   <meta name="color-scheme" content="dark light">
   <title>Сложно сосредоточиться</title>
 </head>
-
 <body class="page">
   <header class="header decorated-zone">
     <div class="record">REC</div>
@@ -47,7 +45,7 @@
   </header>
   <main class="content">
     <section class="content-section why">
-      <h2 class="content-section__title">Почему сосредоточиться так<br>сложно</h2>
+      <h2 class="content-section__title">Почему сосредоточиться так сложно</h2>
       <h3 class="content__paragraph-title title-decor">Многозадачность</h3>
       <p class="content__paragraph">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
         легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том,
@@ -116,11 +114,11 @@
     </section>
     <section class="content-section in-pictures">
       <h3 class="content__pictures-title title-decor">А можно в картинках?</h3>
-      <img class="content__picture" src="./images/sunset.png">
-      <img class="content__picture" src="./images/ice-cream.png">
-      <img class="content__picture" src="./images/tape.png">
-      <img class="content__picture" src="./images/books.png">
-      <img class="content__picture" src="./images/street.png">
+      <img class="content__picture sunset-image" src="./images/sunset.png">
+      <img class="content__picture ice-cream-image" src="./images/ice-cream.png">
+      <img class="content__picture tape-image" src="./images/tape.png">
+      <img class="content__picture books-image" src="./images/books.png">
+      <img class="content__picture street-image" src="./images/street.png">
     </section>
   </main>
   <footer class="footer decorated-zone">
@@ -128,5 +126,4 @@
   </footer>
   <script src="./scripts/script.js"></script>
 </body>
-
 </html>
