выполнена валидация согласно стандартам W3C

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="./images/favicon.ico" sizes="any" />
-  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="./images/favicon.png" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./images/favicon.ico" sizes="any">
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./styles/variables.css">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/dark.css">
@@ -114,11 +114,11 @@
     </section>
     <section class="content-section in-pictures">
       <h3 class="content__pictures-title title-decor">А можно в картинках?</h3>
-      <img class="content__picture sunset-image" src="./images/sunset.png">
-      <img class="content__picture ice-cream-image" src="./images/ice-cream.png">
-      <img class="content__picture tape-image" src="./images/tape.png">
-      <img class="content__picture books-image" src="./images/books.png">
-      <img class="content__picture street-image" src="./images/street.png">
+      <img class="content__picture sunset-image" loading="lazy" src="./images/sunset.png" alt="Картинка в комикс-стилистике. Вид на море на закате, горы видны у линии горизонта, в небе летают чайки.">
+      <img class="content__picture ice-cream-image" loading="lazy" src="./images/ice-cream.png" alt="Детализированный рисунок в комикс-стилистике. Живая улабыющаяся чашка с мороженным многих вкусов, у каждого шарика мороженого лица выраэающие разные эмоции.">
+      <img class="content__picture tape-image" loading="lazy" src="./images/tape.png" alt="Нарисованная картинка, изображающая магнитную касету на фоне окна приложения-проигрывателя.">
+      <img class="content__picture books-image" loading="lazy" src="./images/books.png" alt="Простой рисунок стопки образовательных книг, наверху стопки чашка с кофе. ">
+      <img class="content__picture street-image" loading="lazy" src="./images/street.png" alt="Картинка в комикс-стилистике в фиолетовых оттенках, изображающих японскую улочку с двухэтажными домами, на заднем плане за забором виднеются небоскрёбы.">
     </section>
   </main>
   <footer class="footer decorated-zone">
