добавлен aria для декора, стили из variable перенесены в style, добавлен курсор для кнопок,  добавлен фоллбэк для шрифта

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="page">
   <header class="header decorated-zone">
-    <div class="record">REC</div>
+    <div class="record" aria-hidden="true">REC</div>
     <nav class="header__theme-menu">
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
